pratical/final/database/2021/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ctfd-db-2021-deployment
  namespace: database
  labels:
    ctfd.db.2021.deployment: ctfd-db-2021-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      ctfd.db.2021.pod: ctfd-db-2021-pod
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/convert-internal: 'true'
        ctfd.db.2021.pod: ctfd-db-2021-pod
    spec:
      containers:
      - image: mariadb:10.4.12
        name: ctfd-db-2021
        args:
        - mysqld
        - --character-set-server=utf8mb4
        - --collation-server=utf8mb4_unicode_ci
        - --wait_timeout=28800
        - --log-warnings=0
        volumeMounts:
        - name: ctfd-db-2021-pvc
          mountPath: /var/lib/mysql
        - name: ctfd-db-2021-secret
          mountPath: /etc/ctfd-db
      restartPolicy: Always
      tolerations:
        - key: 'type'
          operator: 'Equal'
          value: 'database'
      volumes:
      - name: ctfd-db-2021-pvc
        persistentVolumeClaim:
          claimName: ctfd-db-2021-pvc
      - name: ctfd-db-2021-secret
        secret:
          secretName: ctfd-db-2021
